Update and rename form-testing to form-testing.html

--- a/form-testing.html
+++ b/form-testing.html
@@ -1,3 +1,7 @@
+<html>
+<head>
+</head>
+<body>
 widget version of the form
 <script type="text/javascript">var loc = "https:/analytics.clickdimensions.com/wwfsaorgza-a75ot/pages/";</script>
 <script type="text/javascript" src="https://az124611.vo.msecnd.net/web/v10/CDWidget.js"></script>
@@ -6,3 +10,6 @@ widget version of the form
 
 iframe version
 <iframe src="https:/analytics.clickdimensions.com/wwfsaorgza-a75ot/pages/cqlmupkveeae4gavxqbwcw.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
+
+</body>
+</html>
