--- a/form-testing.html
+++ b/form-testing.html
@@ -377,7 +377,7 @@ In 2016, Eskom refused to sign the full amount of contracts that were awarded as
 
 	<div class="wpb_raw_code wpb_raw_js">
 		<div class="wpb_wrapper">
-			<script type="text/javascript">var loc = "https://analytics.clickdimensions.com/wwfsaorgza-a75ot/pages/";</script>
+			<script type="text/javascript">var loc = "http://web.wwfsa.org.za/wwfsaorgza-a75ot/pages/";</script>
 <script type="text/javascript" src="https://az124611.vo.msecnd.net/web/v10/CDWidget.js"></script>
 <div pageID="cqlmupkveeae4gavxqbwcw"></div>
 		</div>
