--- a/form-testing.html
+++ b/form-testing.html
@@ -4,18 +4,6 @@
 <head>
 	</head>
 	<body>
-		test form iframe
-		
-		<iframe src="https://analytics-eu.clickdimensions.com/clickdimensionscom-axhko/pages/lqfdywfceeeunqavxwg1ya.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
-		
-		<script type="text/javascript" src="https://analytics-eu.clickdimensions.com/ts.js" > </script> 
-
-<script type="text/javascript"> 
-  var cdAnalytics = new clickdimensions.Analytics('analytics-eu.clickdimensions.com'); 
-  cdAnalytics.setAccountKey('axhkovisiEO9U5zmMFiMNg'); 
-  cdAnalytics.setDomain('cmcarriger.github.io'); 
-  cdAnalytics.setScore(typeof(cdScore) == "undefined" ? 0 : (cdScore == 0 ? null : cdScore)); 
-  cdAnalytics.trackPage(); 
-</script> 
+		<iframe src="http://forms.andythornton.com/andythorntoncom-ajvre/pages/xyf9hoeeaa7jhjuzsbya.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
 	</body>
 </html>
