--- a/form-testing.html
+++ b/form-testing.html
@@ -4,7 +4,9 @@
 <head>
 	</head>
 	<body>
-		test form iframe
-		<iframe src="https://analytics-eu.clickdimensions.com/andythorntoncom-ajvre/pages/xyf9hoeeaa7jhjuzsbya.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
+		test form widget
+		<script type="text/javascript">var loc = "http://web.eque2.com/eque2com-al40i/pages/";</script>
+<script type="text/javascript" src="https://az551914.vo.msecnd.net/web/v10/CDWidget.js"></script>
+<div pageID="kduouwizeeebadhjuzwoka"></div>
 	</body>
 </html>
