--- a/form-testing.html
+++ b/form-testing.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		test form widget
-		<script type="text/javascript">var loc = "http://web.eque2.com/eque2com-al40i/pages/";</script>
+		<script type="text/javascript">var loc = "https://analytics-eu.clickdimensions.com/eque2com-al40i/pages/";</script>
 <script type="text/javascript" src="https://az551914.vo.msecnd.net/web/v10/CDWidget.js"></script>
 <div pageID="kduouwizeeebadhjuzwoka"></div>
 	</body>
