--- a/form-testing.html
+++ b/form-testing.html
@@ -370,9 +370,7 @@ fieldset .form-columns-1 {border:none; width:100%; float:left; }
 		<div class="wpb_wrapper">
 			
 
-<script type="text/javascript">var loc = "https://analytics-eu.clickdimensions.com/eque2com-al40i/pages/";</script>
-<script type="text/javascript" src="https://az551914.vo.msecnd.net/web/v10/CDWidget.js"></script>
-<div pageID="kduouwizeeebadhjuzwoka"></div>
+<iframe src="https://analytics-eu.clickdimensions.com/eque2com-al40i/pages/kduouwizeeebadhjuzwoka.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
 		</div>
 	</div>
 </div></div></div></div><div class="vc_empty_space"  style="height: 32px" ><span class="vc_empty_space_inner"></span></div>
