--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -6,8 +6,8 @@ Test form capture
 <form action="http://analytics-eu.clickdimensions.com/forms/h/aQjmpqgfhoUicsFb2lW8dl">
 <input type="email" name="email"/>
 <input type="text" name="firstname"/>
-<button type="submit" value="Submit"/>
-
+<input type="submit" value="Submit"/>
+  </form>
 <script type="text/javascript" src="https://analytics-eu.clickdimensions.com/ts.js" > </script> 
 
 <script type="text/javascript"> 
@@ -17,5 +17,5 @@ Test form capture
   cdAnalytics.setScore(typeof(cdScore) == "undefined" ? 0 : (cdScore == 0 ? null : cdScore)); 
   cdAnalytics.trackPage(); 
 </script> 
-</body>
-</html>
+  </body>
+  </html>
