--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -1,11 +1,18 @@
 <html>
 <head>
+  <style>
+    input {
+      width: 150px;
+    }
+  </style>
 </head>
 <body>
 Test form capture
-<form action="http://analytics-eu.clickdimensions.com/forms/h/aQjmpqgfhoUicsFb2lW8dl">
+<form action="http://analytics-eu.clickdimensions.com/forms/h/aQjmpqgfhoUicsFb2lW8dl" style="width: 300px;">
 <input type="email" name="email"/>
+  <br/>
 <input type="text" name="firstname"/>
+  <br />
 <input type="submit" value="Submit"/>
   </form>
 <script type="text/javascript" src="https://analytics-eu.clickdimensions.com/ts.js" > </script> 
