--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -9,9 +9,9 @@
 <body>
 Test form capture
 <form action="http://analytics-eu.clickdimensions.com/forms/h/aQjmpqgfhoUicsFb2lW8dl" style="width: 300px;">
-<input type="email" name="email"/>
+<input type="email" name="email" value="email"/>
   <br/>
-<input type="text" name="firstname"/>
+<input type="text" name="firstname" value="first name" />
   <br />
 <input type="submit" value="Submit"/>
   </form>
