--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 Test form capture
-<form action="http://analytics-eu.clickdimensions.com/forms/h/aQjmpqgfhoUicsFb2lW8dl" style="width: 300px;">
+<form action="https://analytics-eu.clickdimensions.com/forms/h/aQjmpqgfhoUicsFb2lW8dl" style="width: 300px;">
 <input type="email" name="email" value="email"/>
   <br/>
 <input type="text" name="firstname" value="first name" />
