--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -13,7 +13,7 @@ Test form capture
   <br/>
 <input type="text" name="firstname" value="first name" />
   <br />
-<input type="submit" value="Submit"/>
+<input type="submit" value="Submit" name="submit" />
   </form>
 <script type="text/javascript" src="https://analytics-eu.clickdimensions.com/ts.js" > </script> 
 
