--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 Test form capture
-<form action="https://analytics-eu.clickdimensions.com/forms/h/aQjmpqgfhoUicsFb2lW8dl" style="width: 300px;" method="post" target="_blank">
-<input type="email" name="email" value="email"/>
+<form action="http://analytics-eu.clickdimensions.com/forms/h/akmSWe9YAj06hlEv2Tez4p" style="width: 300px;" method="post" target="_blank">
+<input type="email" name="email" value="email" Required/>
   <br/>
 
 <input type="submit" value="Submit" name="submit" />
