--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -9,7 +9,9 @@
 <body>
 Test form capture
 <form action="http://analytics-eu.clickdimensions.com/forms/h/akmSWe9YAj06hlEv2Tez4p" style="width: 300px;" method="post" target="_blank">
-<input type="email" name="email" value="email" Required/>
+Email Address
+<br />
+  <input type="email" name="email" Required/>
   <br/>
 
 <input type="submit" value="Submit" name="submit" />
