--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 Test form capture
-<form action="http://analytics-eu.clickdimensions.com/forms/h/akmSWe9YAj06hlEv2Tez4p" style="width: 300px;" method="post" target="_blank">
-Email Address
+<form action="http://analytics-eu.clickdimensions.com/forms/h/aQXqa6TkjC0WPICV29hNhQ" style="width: 300px;" method="post" target="_blank">
+Email Address -- second test
 <br />
   <input type="email" name="email" Required/>
   <br/>
