--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -8,12 +8,13 @@
 </head>
 <body>
 Test form capture
-<form action="http://analytics-eu.clickdimensions.com/forms/h/aQXqa6TkjC0WPICV29hNhQ" style="width: 300px;" method="post" target="_blank">
-Email Address -- second test
+<form action="http://analytics-eu.clickdimensions.com/forms/h/aVid4lGi68EOOg6svPr5IO" style="width: 300px;" method="post" target="_blank">
+Email Address -- another test
 <br />
   <input type="email" name="email" Required/>
   <br/>
-
+ <input type="hidden" name="hidden"/>
+  <br/>
 <input type="submit" value="Submit" name="submit" />
   </form>
 <script type="text/javascript" src="https://analytics-eu.clickdimensions.com/ts.js" > </script> 
