--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -9,7 +9,7 @@
 <body>
 Test form capture
 <form action="http://analytics-eu.clickdimensions.com/forms/h/aVid4lGi68EOOg6svPr5IO" style="width: 300px;" method="post" target="_blank">
-Email Address -- another test
+Email Address -- hidden field
 <br />
   <input type="email" name="email" Required/>
   <br/>
