--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 Test form capture
-<form action="http://analytics-eu.clickdimensions.com/forms/h/aVid4lGi68EOOg6svPr5IO" style="width: 300px;" method="post" target="_blank">
+<form action="https://analytics-eu.clickdimensions.com/forms/h/aVid4lGi68EOOg6svPr5IO" style="width: 300px;" method="post" target="_blank">
 Email Address -- hidden field
 <br />
   <input type="email" name="email" Required/>
