--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 Test form capture
-<form action="https://analytics-eu.clickdimensions.com/forms/h/aVid4lGi68EOOg6svPr5IO" style="width: 300px;" method="post" target="_blank">
-Email Address -- hidden field
+<form action="https://analytics-eu.clickdimensions.com/forms/h/a0hJRFYQG4EyGiIdXokBEQ" style="width: 300px;" method="post" target="_blank">
+Email Address -- filled in test
 <br />
   <input type="email" name="email" Required/>
   <br/>
- <input type="hidden" name="hidden"/>
+ <input type="text" name="hidden" value="hidden" style="display: none;"/>
   <br/>
 <input type="submit" value="Submit" name="submit" />
   </form>
