--- a/cmc-formcapture.html
+++ b/cmc-formcapture.html
@@ -8,13 +8,12 @@
 </head>
 <body>
 Test form capture
-<form action="https://analytics-eu.clickdimensions.com/forms/h/a0hJRFYQG4EyGiIdXokBEQ" style="width: 300px;" method="post" target="_blank">
-Email Address -- filled in test
+<form action="https://analytics-eu.clickdimensions.com/forms/h/aLEGJM8mWv0emLHVFN9Zfd" style="width: 300px;" method="post" target="_blank">
+Email Address -- secure email
 <br />
   <input type="email" name="email" Required/>
   <br/>
- <input type="text" name="hidden" value="hidden" style="display: none;"/>
-  <br/>
+
 <input type="submit" value="Submit" name="submit" />
   </form>
 <script type="text/javascript" src="https://analytics-eu.clickdimensions.com/ts.js" > </script> 
