--- a/form-testing.html
+++ b/form-testing.html
@@ -8,6 +8,12 @@
 
 <body>
 	iframe embedded form
+	<script>
+$(function() {
+var search = window.location.search;
+$("#clickdim").attr("src", $("#clickdim").attr("src")+search);
+});
+</script>
 <iframe id="clickdim" src="https://analytics.clickdimensions.com/traceonecom-acmor/pages/obzgrogeeebgoahg2wosq.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
 	
 	
