--- a/form-testing.html
+++ b/form-testing.html
@@ -7,13 +7,8 @@
 </head>
 
 <body>
-	iframe embedded form
-	<script>
-$(function() {
-var search = window.location.search;
-$("#clickdim").attr("src", $("#clickdim").attr("src")+search);
-});
-</script>
+	iframe embedded form test 3
+	
 <iframe id="clickdim" src="https://analytics.clickdimensions.com/traceonecom-acmor/pages/obzgrogeeebgoahg2wosq.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
 	</body>
 </html>
