--- a/form-testing.html
+++ b/form-testing.html
@@ -7,13 +7,18 @@
 </head>
 
 <body>
-	iframe embedded form test 8 (test form from success)
+	iframe embedded form test 9 (test form from success)
 <script>
+
 $(function() {
+
 var search = window.location.search;
-$("#form").attr("src", $("#form").attr("src")+search);
+
+$("#foo").attr("src", $("#foo").attr("src")+search);
+
 });
+
 </script>	
-<iframe id="form" src="https://analytics.clickdimensions.com/clickdimensionscom-au9y6/pages/4mxw5irneeeunqavxwg1ya.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
+<iframe id="foo" src="https://analytics.clickdimensions.com/clickdimensionscom-au9y6/pages/4mxw5irneeeunqavxwg1ya.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
 	</body>
 </html>
