--- a/form-testing.html
+++ b/form-testing.html
@@ -2,18 +2,18 @@
 <!doctype html>
 <html>
 <head>
-<script>
-$(function() {
-var search = window.location.search;
-$("#foo").attr("src", $("#foo").attr("src")+search);
-});
-</script>	
+
 
 </head>
 
 <body>
 	iframe embedded form test 12 (test form from success)
-	
+	<script>
+$(document).ready(function() {
+var search = window.location.search;
+$("#foo").attr("src", $("#foo").attr("src")+search);
+});
+</script>	
 <iframe id="foo" src="https://analytics.clickdimensions.com/clickdimensionscom-au9y6/pages/4mxw5irneeeunqavxwg1ya.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
 	</body>
 </html>
