--- a/form-testing.html
+++ b/form-testing.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-	iframe embedded form test 13 (test form from success)
+	iframe embedded form test 14 (test form from success)
 	<script>
-$(document).ready(function() {
+$(function(){
 var search = window.location.search;
 $("#foo").attr("src", $("#foo").attr("src")+search);
 });
