--- a/form-testing.html
+++ b/form-testing.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-	iframe embedded form test 14 (test form from success)
+	iframe embedded form test 15 (test form from success)
 	<script>
 $(function(){
-var search = window.location.search;
+var search = location.search;
 $("#foo").attr("src", $("#foo").attr("src")+search);
 });
 </script>	
