--- a/form-testing.html
+++ b/form-testing.html
@@ -8,10 +8,12 @@
 <body>
 	iframe embedded form test 15 (test form from success)
 	<script>
+$( document ).ready(function() {		
 $(function(){
 var search = window.location.search;
 $("#foo").attr("src", $("#foo").attr("src")+search);
 });
+}
 </script>	
 <iframe id="foo" src="https://analytics.clickdimensions.com/clickdimensionscom-au9y6/pages/4mxw5irneeeunqavxwg1ya.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
 	</body>
