--- a/form-testing.html
+++ b/form-testing.html
@@ -11,6 +11,7 @@
 $( document ).ready(function() {		
 $(function(){
 var search = window.location.search;
+	alert(search);
 $("#foo").attr("src", $("#foo").attr("src")+search);
 });
 }
