--- a/form-testing.html
+++ b/form-testing.html
@@ -2,14 +2,11 @@
 <!doctype html>
 <html>
 <head>
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 </head>
 
 <body>
-	iframe embedded form test 15 (test form from success)
+	iframe embedded form test 16 (test form from success)
 	<script>
 $( document ).ready(function() {		
 $(function(){
