--- a/form-capture-testing.html
+++ b/form-capture-testing.html
@@ -5,25 +5,25 @@
   </style>
 </head>
 <body>
-Test form capture
- <form id="clickdimensionsForm" name="clickdimensionsForm" method="post" accept-charset="utf-8" enctype="multipart/form-data" action="http://analytics-eu.clickdimensions.com/forms/h/absv6hOakeIJ9HLW0fOuA">
+Test form capture 2
+ <form id="clickdimensionsForm" name="clickdimensionsForm" method="post" accept-charset="utf-8" enctype="multipart/form-data" action="http://analytics-eu.clickdimensions.com/forms/h/aAtzncFtmF0eAqQfVuur0o">
 
-                            <input type="hidden" placeholder="topic" id="txtTopic" name="txtTopic" value="Test topic TamTam">
-                            <input type="hidden" placeholder="topic" id="txtLanguage" name="txtLanguage" value="NL">
+                            <input type="hidden" placeholder="topic" id="txtTopic" name="11" value="Test topic TamTam">
+                            <input type="hidden" placeholder="topic" id="txtLanguage" name="cmc-hidden" value="NL">
 
                             <div class="c-form-item">
                                 <label class="c-label" for="txtFirstName">first name</label>
-                                <input class="c-input" type="text" id="txtFirstName" name="txtFirstName" required>
+                                <input class="c-input" type="text" id="txtFirstName" name="firstname" required>
                             </div>
 
                             <div class="c-form-item">
                                 <label class="c-label" for="txtLastName">last name</label>
-                                <input class="c-input" type="text" id="txtLastName" name="txtLastName" required>
+                                <input class="c-input" type="text" id="txtLastName" name="lastname" required>
                             </div>
 
                             <div class="c-form-item">
                                 <label class="c-label" for="txtEmail">email address</label>
-                                <input class="c-input" type="email" id="txtEmail" name="txtEmail" required>
+                                <input class="c-input" type="email" id="txtEmail" name="email" required>
                             </div>
 
                             <div class="c-form-item">
