--- a/form-capture-testing.html
+++ b/form-capture-testing.html
@@ -5,10 +5,10 @@
   </style>
 </head>
 <body>
-Test form capture 2
+Test form capture 3
  <form id="clickdimensionsForm" name="clickdimensionsForm" method="post" accept-charset="utf-8" enctype="multipart/form-data" action="http://analytics-eu.clickdimensions.com/forms/h/aAtzncFtmF0eAqQfVuur0o">
 
-                            <input type="hidden" placeholder="topic" id="txtTopic" name="11" value="Test topic TamTam">
+                            <input type="hidden" placeholder="topic" id="txtTopic" name="cmc-hidden-text" value="Test topic TamTam">
                             <input type="hidden" placeholder="topic" id="txtLanguage" name="cmc-hidden" value="NL">
 
                             <div class="c-form-item">
