--- a/form-capture-testing.html
+++ b/form-capture-testing.html
@@ -6,40 +6,18 @@
 </head>
 <body>
 Test form capture 4
- <form id="clickdimensionsForm" name="clickdimensionsForm" method="post" accept-charset="utf-8" enctype="multipart/form-data" action="http://analytics-eu.clickdimensions.com/forms/h/aAtzncFtmF0eAqQfVuur0o">
+ <form id="clickdimensionsForm" name="clickdimensionsForm" method="post" accept-charset="utf-8" enctype="multipart/form-data" action="http://analytics-eu.clickdimensions.com/forms/h/ah3Ds23pYikiSgyNQqHTeZ"> 
 
-                            <input type="hidden" placeholder="topic" id="txtTopic" name="cmc-hidden-text" value="Test topic TamTam">
-                            <input type="hidden" placeholder="topic" id="txtLanguage" name="cmc-hidden" value="NL">
+<input type="hidden" placeholder="topic" id="txtTopic" name="txtTopic" value="Test topic TamTam">
+<input type="hidden" placeholder="topic" id="txtLanguage" name="txtLanguage" value="NL"> 
+<input type="text" placeholder="voornaam" id="txtFirstName" name="txtFirstName"><br>
+<input type="text" placeholder="achternaam" id="txtLastName" name="txtLastName" ><br>
+<input type="email" placeholder="email" id="txtEmail" name="txtEmail"><br><br>
+ 
+<input type="submit" class="c-button-link" value="Versturen">
 
-                            <div class="c-form-item">
-                                <label class="c-label" for="txtFirstName">first name</label>
-                                <input class="c-input" type="text" id="txtFirstName" name="firstname" required>
-                            </div>
+</form>
 
-                            <div class="c-form-item">
-                                <label class="c-label" for="txtLastName">last name</label>
-                                <input class="c-input" type="text" id="txtLastName" name="lastname" required>
-                            </div>
-
-                            <div class="c-form-item">
-                                <label class="c-label" for="txtEmail">email address</label>
-                                <input class="c-input" type="email" id="txtEmail" name="email" required>
-                            </div>
-
-                            <div class="c-form-item">
-                                <button type="submit" class="c-input--submit" id="formSubmit" value="send">
-                                    <span class="input__submit-icon">
-
-                                        <!--  icon--arrow-right.svg  -->
-                                        <svg class="svg-icon--arrow-right" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 15.1 8.7"><path d="M14 3.4H1a1 1 0 0 0-1 1 1 1 0 0 0 1 1h13a1 1 0 0 0 1-1 1 1 0 0 0-1-1z"/><path d="M14.4 4A1 1 0 0 0 13 4l-3 3a1 1 0 0 0 0 1.4 1 1 0 0 0 1.3 0l3-3a1 1 0 0 0 0-1.4z" data-name="Rectangle-5"/><path d="M14.4 4.7a1 1 0 0 1-1.3 0l-3-3a1 1 0 0 1 0-1.4 1 1 0 0 1 1.4 0l3 3a1 1 0 0 1 0 1.4z" data-name="Rectangle-5"/></svg>
-
-                                    </span>
-
-                                    send
-                                </button>
-                            </div>
-
-                        </form>
 
 <script type="text/javascript" src="https://analytics-eu.clickdimensions.com/ts.js" > </script> 
 
