--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -1,1 +1,11 @@
-test version 1
+<form id="NewFormCaptureTest" name="NewFormCaptureTest" action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ" method="post" target="_blank">
+<input type="hidden" name="txtTopic" id="txtTopic" value="Contact Us - test website" />
+Company Name: <input type="text" name="Company Name" id="Company Name" /><br />
+First Name: <input type="text" name="First Name" id="First Name"/><br />
+Email: <input type="email" name="Email" id="Email"/><br />
+<!-- Newsletter: <input type="checkbox" name="checkbox" id="checkbox"/><br /> -->
+Newsletter: <input type="radio" name="newsletterradio" id="newsletterradio" value="true"> Yes <input type="radio" name="newsletterradio" id="newsletterradio" value="false"> No<br />
+
+
+<input type="submit" value="Submit">
+</form> 
