--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -1,5 +1,5 @@
-<form id="NewFormCaptureTest" name="NewFormCaptureTest" action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ" method="post" target="_blank">
-<input type="hidden" name="txtTopic" id="txtTopic" value="Contact Us - test website" />
+<form id="Contact Us - Southern Beard Co." name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
+<input type="hidden" name="txtTopic" id="txtTopic" value="Contact Us - Southern Beard Co." />
 Company Name: <input type="text" name="Company Name" id="Company Name" /><br />
 First Name: <input type="text" name="First Name" id="First Name"/><br />
 Email: <input type="email" name="Email" id="Email"/><br />
