--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -1,8 +1,7 @@
 <form id="Contact Us - Southern Beard Co." name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
 <input type="hidden" name="txtTopic" id="txtTopic" value="Contact" />
-Company Name: <input type="text" name="Company Name" id="Company Name" /><br />
 First Name: <input type="text" name="First Name" id="First Name"/><br />
-Email: <input type="email" name="Email" id="Email"/><br />
+Email: <input type="email" name="Email" id="Email Address"/><br />
 <!-- Newsletter: <input type="checkbox" name="checkbox" id="checkbox"/><br /> -->
 
 <input type="submit" value="Submit">
