--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -1,7 +1,9 @@
-test6
+test3
 <form id="Contact" name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
-First Name: <input type="text" name="First_Name" id="First Name"/><br />
-Email: <input type="Email" name="Email" id="Email"/><br />
+<input name="txtTopic" id="txtTopic" value="Contact" />
+First Name: <input type="text" name="First Name" id="First Name"/><br />
+Email: <input type="email" name="Email Address" id="Email"/><br />
+<!-- Newsletter: <input type="checkbox" name="checkbox" id="checkbox"/><br /> -->
 
 <input type="submit" value="Submit">
 </form> 
