--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -6,3 +6,13 @@ Email: <input type="email" name="Email Address" id="Email"/><br />
 
 <input type="submit" value="Submit">
 </form> 
+
+<script type="text/javascript" src="https://analytics.clickdimensions.com/ts.js" > </script> 
+
+<script type="text/javascript"> 
+  var cdAnalytics = new clickdimensions.Analytics('analytics.clickdimensions.com'); 
+  cdAnalytics.setAccountKey('au9Y6e3q8X0C3rUTVsGbNL'); 
+  cdAnalytics.setDomain('clickdimensions.com'); 
+  cdAnalytics.setScore(typeof(cdScore) == "undefined" ? 0 : (cdScore == 0 ? null : cdScore)); 
+  cdAnalytics.trackPage(); 
+</script> 
