--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -1,4 +1,4 @@
-test4
+test5
 <form id="Contact" name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
 First Name: <input type="text" name="First Name" id="First Name"/><br />
 Email: <input type="email" name="Email Address" id="Email"/><br />
@@ -12,7 +12,7 @@ Email: <input type="email" name="Email Address" id="Email"/><br />
 <script type="text/javascript"> 
   var cdAnalytics = new clickdimensions.Analytics('analytics.clickdimensions.com'); 
   cdAnalytics.setAccountKey('au9Y6e3q8X0C3rUTVsGbNL'); 
-  cdAnalytics.setDomain('clickdimensions.com'); 
+  cdAnalytics.setDomain('cmcarriger.github.io'); 
   cdAnalytics.setScore(typeof(cdScore) == "undefined" ? 0 : (cdScore == 0 ? null : cdScore)); 
   cdAnalytics.trackPage(); 
 </script> 
