--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -1,3 +1,10 @@
+<html>
+<head>
+  <style>
+    
+  </style>
+</head>
+<body>
 test5
 <form id="Contact" name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
 First Name: <input type="text" name="First Name" id="First Name"/><br />
@@ -6,7 +13,7 @@ Email: <input type="email" name="Email Address" id="Email"/><br />
 
 <input type="submit" value="Submit">
 </form> 
-
+</body>
 <script type="text/javascript" src="https://analytics.clickdimensions.com/ts.js" > </script> 
 
 <script type="text/javascript"> 
