--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 test5
-<form id="Contact" name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
+<form id="Contact" method="post" name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
 First Name: <input type="text" name="First Name" id="First Name"/><br />
 Email: <input type="email" name="Email Address" id="Email"/><br />
 <!-- Newsletter: <input type="checkbox" name="checkbox" id="checkbox"/><br /> -->
