--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -7,7 +7,7 @@
 <body>
 test6
 <form id="Contact" method="post" name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
-First Name: <input type="text" name="First Name" id="first_name"/><br />
+First Name: <input type="text" name="First Name" id="First Name"/><br />
 Email: <input type="email" name="Email Address" id="Email"/><br />
 <!-- Newsletter: <input type="checkbox" name="checkbox" id="checkbox"/><br /> -->
 
@@ -24,3 +24,4 @@ Email: <input type="email" name="Email Address" id="Email"/><br />
   cdAnalytics.trackPage(); 
 </script> 
   </body>
+</html>
