--- a/tim-form-capture.html
+++ b/tim-form-capture.html
@@ -7,8 +7,8 @@
 <body>
 test8
 <form id="Contact" method="post" name="Contact Us - Southern Beard Co." action="http://analytics.clickdimensions.com/forms/h/av0DzUUenkSfs08tIPE3KQ">
-First Name: <input type="text" name="First Name" id="First Name"/><br />
-Email: <input type="email" name="Email Address" id="Email" Required/><br />
+First Name: <input type="text" name="first_name" id="First Name"/><br />
+Email: <input type="email" name="Email" id="Email" Required/><br />
 <!-- Newsletter: <input type="checkbox" name="checkbox" id="checkbox"/><br /> -->
 
 <input type="submit" value="Submit">
