--- a/kevin-testing.html
+++ b/kevin-testing.html
@@ -2,15 +2,19 @@
 <head>
 </head>
 <body>
-test form 1
-  <iframe src="https://analytics.clickdimensions.com/stoneridgesoftwarecom-a4dvb/pages/cfnfxzdxeeebluahg2auqq.html" allowtransparency="true" width="100%" height="500px" type="text/html" frameborder="0" style="border:0"></iframe>
+test page for page views
+  random content
+  
+ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum in viverra mi. Sed eleifend tincidunt placerat. Aliquam ultricies finibus quam, eu vulputate mauris condimentum at. Nunc vel tortor ipsum. Donec neque tortor, sollicitudin vitae blandit sed, maximus nec mi. Integer ultrices est orci, sit amet sodales metus luctus ac. Praesent mollis porta commodo. Aenean blandit tincidunt nunc nec laoreet. Integer a odio non ante ultricies mollis eu quis erat. Nullam id finibus metus. Etiam luctus nibh quam, in egestas ipsum porttitor eget. Sed mattis facilisis justo id dignissim. Sed velit nisi, auctor eget ligula quis, gravida sodales eros. Quisque ut neque at velit ultrices porta eget et leo. Mauris dignissim porttitor nisl id sodales. Pellentesque porttitor facilisis tellus eget pretium.
+
+Nulla malesuada pulvinar metus eu tempor. In eget est quis nunc gravida fermentum quis vitae massa. Donec quis nisi blandit, sollicitudin lectus sit amet, volutpat lectus. Morbi eleifend nisl id eros luctus luctus. Etiam rhoncus vitae nisl ac finibus. In ultrices, risus at gravida ullamcorper, neque mi mattis nisi, sit amet tempus libero dui dignissim felis. Nullam porta nulla et arcu placerat lobortis. Suspendisse faucibus auctor ornare. Donec in consequat arcu. Fusce imperdiet gravida mauris a dapibus.
 
 <script type="text/javascript" src="https://analytics.clickdimensions.com/ts.js" > </script> 
 
 <script type="text/javascript"> 
   var cdAnalytics = new clickdimensions.Analytics('analytics.clickdimensions.com'); 
   cdAnalytics.setAccountKey('a4dVbIOMdqUmPgBxjKLLHW'); 
-  cdAnalytics.setDomain('stoneridgesoftware.com'); 
+  cdAnalytics.setDomain('cmcarriger.github.io'); 
   cdAnalytics.setScore(typeof(cdScore) == "undefined" ? 0 : (cdScore == 0 ? null : cdScore)); 
   cdAnalytics.trackPage(); 
 </script> 
